--- a/config/database.yml
+++ b/config/database.yml
@@ -23,7 +23,8 @@ default: &default
 
 development:
   <<: *default
-  database: recipe_box_development
+  database: recipe_box
+  username: Roma
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
